Lineamientos_Nuevos_Borradores/versionamiento/ejemplos-plantillas-gitlab/template-microservicio-java/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nombre-microservicio
spec:
  selector:
    app.kubernetes.io/name: nombre-microservicio
  ports:
    - name: http
      port: 80
      targetPort: http
